# OpenStainer

./: Cargo.toml  README.md  exit_kiosk_mode.sh  project.clj  run.sh  schema.edn  stopall.sh
cad/: frame_cut.FCStd  frame_precut.FCStd
pi_setup_files/: config.txt  rc.local
resources/public/: cards.html  index.html
resources/public/css/: devcards-onscreen-keyboards.css  onscreen-keyboard.css  slide-stainer.css
schematics/: pi_board-cache.lib  pi_board-rescue.lib  pi_board.bak  pi_board.kicad_pcb  pi_board.net  pi_board.pro  pi_board.sch  pi_board.sch-bak  pi_board_new.net  sym-lib-table
src/: couchdb.rs  graphql.rs  main.rs  motion.rs  structs_and_consts.rs
src/clj/slide_stainer/: board_setup.clj  core.clj  db.clj  defs.clj  graphql.clj  motion.clj
src/clj/test_reagent/: core.clj
src/cljs/slide_stainer/: atoms.cljs  core.cljs  graphql.cljs  onscreen-keyboard.cljs  onscreen_keyboard.cljs  periodic-updater.cljs  periodic_updater.cljs  procedure-run.cljs  procedure-selection.cljs  procedure_edit.cljs  procedure_run.cljs  procedure_selection.cljs  program-creation.cljs  program_creation.cljs  settings.cljs  svg.cljs  toaster_oven.cljs
src/cljs/test_reagent/: core.cljs
