[package]
name = "rmrm"
version = "0.1.0"
authors = ["Aaron Decker <decker49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
thread-priority = "0.1.1"
gpio = "0.4.1"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
