[package]
name = "rmrm"
version = "0.1.0"
authors = ["Aaron Decker <decker49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.3" # for serving up static files
rocket_cors = "0.5.1"
thread-priority = "0.1.1"
gpio = "0.4.1"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.104"